crates/ink/tests/ui/blake2b/fail/non_literal_parameter.rs
const INPUT: &str = "test";
const _: [u8; 32] = ink::blake2x256!(INPUT);

fn main() {}
