crates/ink/tests/ui/blake2b/fail/non_literal_parameter.stderr
error: expected string or byte string literal as input: expected literal
 --> tests/ui/blake2b/fail/non_literal_parameter.rs:2:38
  |
2 | const _: [u8; 32] = ink::blake2x256!(INPUT);
  |                                      ^^^^^
